# APM

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  main.qml  АРМ_Отчет.docx
android/: AndroidManifest.xml  build.gradle
android/src/com/example/blindassist/: ARCoreManager.kt  DepthDistanceEstimator.kt  MainActivity.kt  ServerAnalyzer.kt  TtsManager.kt  VibrationManager.kt  VoiceManager.kt  YuvSnapshot.kt
cpp/core/: DistanceModel.cpp  DistanceModel.h
cpp/jni/: JniBridge.cpp  JniBridge.h
cpp/vibration/: VibrationEngine.cpp  VibrationEngine.h
server/: requirements.txt  server.py  start_server.bat
